samples/_failures_safe/1761372778_b7b0f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_993b8308.c: In function ‘main’:
./samples/SAFE/__tmp_993b8308.c:142:5: error: expected declaration or statement at end of input
  142 |     }
      |     ^
